# AreYouGreen2

./: .gitignore  ModelImports.py  app.py  createDB.py  main.py  pyproject.toml  readme.md
models/: Collabs.py  Departments.py  Organisations.py  Tasks.py  collabs.py  departments.py  organisations.py  owners.py  tasks.py  user.py  users.py
routes/: __init__.py  index.py  organisation.py  signup.py  test.py
static/css/: style.css
static/js/: index.js  organisation.js  organisationDbEnabled.js
templates/: header.html  index.html  login.html  organisation.html  organisationDbEnabled.html  register.html  stats.html
